[package]
name = "mptcp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.74"
async_async_io = "0.1.3"
bytes = "1.5.0"
scopeguard = "1.2.0"
thiserror = "1.0.50"
tokio = { version = "1.33.0", features = ["full"] }
