[package]
name = "mptcp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["cli"]

[dependencies]
async-trait = "0.1.74"
async_async_io = "0.1.4"
bytes = "1.5.0"
rand = "0.8.5"
scopeguard = "1.2.0"
thiserror = "1.0.50"
tokio = { version = "1.33.0", features = ["io-util", "rt", "macros", "sync", "time"] }
