[package]
name = "mptcp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["cli"]

[dependencies]
async_async_io = "0.2"
bytes = "1"
rand = "0.8"
scopeguard = "1"
thiserror = "1"
tokio = { version = "1", features = ["io-util", "rt", "macros", "sync", "time"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
