[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5.0"
clap = { version = "4.4.6", features = ["derive"] }
mptcp = { path = "../" }
tokio = { version = "1.33.0", features = ["full"] }
